--- a/index.html
+++ b/index.html
@@ -240,13 +240,13 @@
 
       <div class="stats-col text-center col-md-4 col-sm-6">
         <div class="circle">
-          <span class="stats-perc" data-toggle="counter-up">0</span> Percent of my Student Loans paid
+          <span class="stats-perc" data-toggle="counter-up">0</span> Student Loans paid
         </div>
       </div>
 
       <div class="stats-col text-center col-md-4 col-sm-6">
         <div class="circle">
-          <span class="stats-no" data-toggle="counter-up">0</span> Tokens Issued
+          <span class="stats-no" data-toggle="counter-up">0</span> Coins Issued
         </div>
       </div>
 
