--- a/index.html
+++ b/index.html
@@ -105,9 +105,9 @@
                 How does it work?
               </h2>
               <p>
-                Kappa Coin is <i>definitely</i> legit and not just a way to help me pay off
-                my student loans. In fact, not only may it be the best coin on the market,
-                it may even replace bitcoin or something. That could <i>totally</i> happen.
+                Kappa Coin is <i>definitely</i> the most legit crypto on the market bar-none.
+                In fact, not only is it be the best coin on the market, it may even replace bitcoin
+                or something. That could totally happen.
               </p>
           </div>
 
@@ -128,9 +128,9 @@
                   Is it secure?
                 </h2>
                 <p>
-                  <i>Of course</i> it's secure, I <i>totally</i> didn't just make this
+                  <i>Of course</i> it's secure, I totally didn't just make this
                   over the weekend by walking through tutorials online. I've spent
-                  <i>countless minutes</i> on this project. Frankly I'm offended you even asked.
+                  countless minutes on this project. Frankly I'm offended you even asked.
                 </p>
           </div>
 
@@ -201,6 +201,13 @@
           <h2>Bonuses</h2>
           <p>Every 1 in 256 blocks has a chance to become a bonus block. These blocks
             reward a lucky contributor with the original price of 200 KAPPA per ETH.
+            <br><br>
+            Guess that means you're gonna have to buy lots of coins at once right? You
+            gotta maximize that efficiency after all. Don't wanna be one of those people who thinks:
+            "Wow, I <i>really</i> wish I would have spent 100 ETH on Kappa Coin back in 2017. It's worth
+            30 bagillion dollars now!"
+            <br><br>
+            I highly reccomend putting in at LEAST 50 ETH. The sky is the limit to this baby.
         </p>
         </div>
 
@@ -218,7 +225,7 @@
             </h2>
 
             <p>
-              Buy my <i>totally not useless</i> cryptocurrency
+              Buy this <i>totally not useless</i> cryptocurrency
             </p>
           </div>
 
@@ -234,19 +241,19 @@
     <div class="row stats-row">
       <div class="stats-col text-center col-md-4 col-sm-6">
         <div class="circle">
-          <span class="stats-no" data-toggle="counter-up">0</span> Ether Contributed
+          <span class="stats-no" data-toggle="counter-up">0</span> Ether Wasted
         </div>
       </div>
 
       <div class="stats-col text-center col-md-4 col-sm-6">
         <div class="circle">
-          <span class="stats-perc" data-toggle="counter-up">0</span> Student Loans paid
+          <span class="stats-dollar" data-toggle="counter-up">0</span> That's a lot of ramen
         </div>
       </div>
 
       <div class="stats-col text-center col-md-4 col-sm-6">
         <div class="circle">
-          <span class="stats-no" data-toggle="counter-up">0</span> Coins Issued
+          <span class="stats-no" data-toggle="counter-up">0</span> <i>Amazing</i> Coins issued
         </div>
       </div>
 
