--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
           </h1>
 
           <p class="tagline">
-            Buying this coin is a <i>great</i> idea
+            Buying this coin is a <i>great</i> idea!
           </p>
           <a class="btn btn-full" href="#about">Get Started Now</a>
         </div>
@@ -119,7 +119,7 @@
                 After seeing such <i>fantastic</i> coins such as Dogecoin, BitBean and
                 Useless Ethereum Token, I asked myself "Will people buy anything?" KAPPA
                 offers just as much functionality as other cryptocurrencies with the
-                added benefit of paying off my student loans.
+                added benefit of novelty or something, I dunno.
               </p>
           </div>
 
@@ -205,7 +205,7 @@
             Guess that means you're gonna have to buy lots of coins at once right? You
             gotta maximize that efficiency after all. Don't wanna be one of those people who thinks:
             "Wow, I <i>really</i> wish I would have spent 100 ETH on Kappa Coin back in 2017. It's worth
-            30 bagillion dollars now!"
+            30 bajillion dollars now!"
             <br><br>
             I highly reccomend putting in at LEAST 50 ETH. The sky is the limit to this baby.
         </p>
