--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
 
           <div class="stats-col text-center col-md-3 col-sm-6">
               <h2>
-                Why KAPPA?
+                Why would I buy KAPPA?
               </h2>
               <p>
                 After seeing such <i>fantastic</i> coins such as Dogecoin, BitBean and
@@ -125,7 +125,7 @@
 
           <div class="stats-col text-center col-md-3 col-sm-6">
                 <h2>
-                  Is it secure?
+                  Is this coin secure?
                 </h2>
                 <p>
                   <i>Of course</i> it's secure, I totally didn't just make this
@@ -253,7 +253,7 @@
 
       <div class="stats-col text-center col-md-4 col-sm-6">
         <div class="circle">
-          <span class="stats-no" data-toggle="counter-up">0</span> <i>Amazing</i> Coins issued
+          <span class="stats-no" data-toggle="counter-up">0</span> Coins issued
         </div>
       </div>
 
