--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
                 After seeing such <i>fantastic</i> coins such as Dogecoin, BitBean and
                 Useless Ethereum Token, I asked myself "Will people buy anything?" KAPPA
                 offers just as much functionality as other cryptocurrencies with the
-                added benefit of novelty or something, I dunno.
+                added benefit of collecting a <i>totally unique</i> coin.
               </p>
           </div>
 
