--- a/index.html
+++ b/index.html
@@ -195,6 +195,7 @@
               <td>194 KAPPA</td>
             </tr>
           </table>
+          <br> This is a standard ERC20 token.
         </p>
         </div>
         <div class="col-lg-4 ">
@@ -207,7 +208,7 @@
             "Wow, I <i>really</i> wish I would have spent 100 ETH on Kappa Coin back in 2017. It's worth
             30 bajillion dollars now!"
             <br><br>
-            I highly reccomend putting in at LEAST 50 ETH. The sky is the limit to this baby.
+            I highly recommend putting in at LEAST 50 ETH. The sky is the limit to this baby.
         </p>
         </div>
 
