--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
       <div class="container text-center">
         <div class="row">
           <div class="col-md-12">
-            <a class="hero-brand" href="index.html" title="Home"><img alt="Kappa Logo" src="img/logo-med.png"></a>
+            <a class="hero-brand" href="" title="Home"><img alt="Kappa Logo" src="img/logo-med.png"></a>
           </div>
         </div>
 
@@ -233,6 +233,12 @@
 
 
             <br>
+            <h3>Send ETH to: </h3>
+            <p>0x962F57e8131A39c592485746373D1d80768e548f<br><br>View on
+              <a href="https://etherscan.io/address/0x962F57e8131A39c592485746373D1d80768e548f">
+              Etherscan</a> and
+              <a href="https://etherchain.org/account/0x962F57e8131A39c592485746373D1d80768e548f">Etherchain</a></p>
+
 
           </div>
         </div>
