Fixed hover links

--- a/index.html
+++ b/index.html
@@ -161,6 +161,8 @@
       <p class="tagline-sarc"> (This is a <i>great</i> idea by the way and <i>definitely</i> won't be
         a waste of your time and energy)</p>
 
+      <a href="https://bitcointalk.org/index.php?topic=2011449">Bitcointalk discussion</a>
+
       <p class="dates">
         The ICO begins: July 10th, 2017 at 11am EST<br> and runs until July 24th, 2017
       </p>
