--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
 
       <nav class="nav social-nav pull-right hidden-sm-down">
         <a href="mailto:kappacrypto@gmail.com"><i class="fa fa-envelope"></i></a>
-        <a href="https://github.com/kappa-coin"><i class="fa fa-github"></i></a><a href="https://twitter.com/Kappa_Coin"><i class="fa fa-twitter"></i></a>
+        <!--a href="https://github.com/kappa-coin"><i class="fa fa-github"></i></a--><a href="https://twitter.com/Kappa_Coin"><i class="fa fa-twitter"></i></a>
         <!--a href="#"><i class="fa fa-facebook"></i></a-->
       </nav>
     </div>
