--- a/index.html
+++ b/index.html
@@ -52,8 +52,8 @@
     <section class="hero">
       <div class="container text-center">
         <div class="row">
-          <div class="col-md-12">
-            <a class="hero-brand" href="" title="Home"><img alt="Kappa Logo" src="img/logo-med.png"></a>
+          <div class="col-md-12 col-sm-3">
+            <a class="hero-brand" href="" title="Home"><img class="hero-brand" alt="Kappa Logo" src="img/logo-med.png"></a>
           </div>
         </div>
 
